--- a/src/app/components/pages/design-graphique/design-graphique.component.html
+++ b/src/app/components/pages/design-graphique/design-graphique.component.html
@@ -6,8 +6,8 @@
         <div class="container">
             <!-- <div class="page-title-content">
                 <ul>
-                    <li><a href="index.html">Acceuil</a></li>
-                    <li><a href="courses-2-columns-style-1.html">DESIGN GRAPHIQUE</a></li>
+                    <a href="index.html">Acceuil</a>
+                    <a href="courses-2-columns-style-1.html">DESIGN GRAPHIQUE</a>
 
                 </ul>
             </div> -->
@@ -62,19 +62,19 @@
                 <div class="col-lg-4">
                     <div class="courses-sidebar-information">
                         <ul>
-                            <li>
+                            
                                 <span><img  id="icon" src="../../../../assets/img/icons/identity.png" alt="Identity icon &nbsp;">&nbsp;Aide à la présence de votre identité</span>
 
-                            </li>
-                            <li>
+                            
+                            
                                 <span><img  id="icon" src="../../../../assets/img/icons/badge.png" alt="Web Dev icon &nbsp;">&nbsp;Apportent une valeur professionnelle</span>
-                            </li>
-                            <li>
+                            
+                            
                                 <span><img  id="icon" src="../../../../assets/img/icons/increase.png" alt="Increase icon &nbsp;">&nbsp;Améliore le positionnement sur le marché</span>
-                            </li>
-                            <li>
+                            
+                            
                                 <span><img  id="icon" src="../../../../assets/img/icons/handshake.png" alt="Credibility icon &nbsp;">&nbsp;Une bonne conception confère de la crédibilité</span>
-                            </li>
+                            
                         </ul>
                     </div>
                 </div>
@@ -198,77 +198,77 @@
 
                                     <ul>
                                         <div>
-                                            <li><span>
+                                            <span>
                                                 <!-- <i class='bx bx-check'></i> -->
                                                 Charte graphique standard
                                             </span>
-                                            </li>
+                                            
                                         </div>
                                         <div>
-                                        <li>
+                                        
                                             <span>
                                                 <i class='bx bx-check'></i>
 
     Typographie originale
                                             </span>
-                                    </li></div>
+                                    </div>
 
                                     <div>
-                                    <li>
+                                    
                                             <span>
                                                 <i class='bx bx-check'></i>
                                                 Prise de brief et création de deux 2 déclinaisons au choix : (Carte visite, flyers, dépliants, Enveloppe, Papier en-tête, Dossier commercial, Cachet, signature email)
                                             </span>
-                                    </li></div>
+                                    </div>
 
 
                                             <div>
-                                            <li>
+                                            
                                             <span>
                                                 <i class='bx bx-check'></i>
                                                 2 Propositions vectorisées Charte graphique
 
                                             </span>
-    </li></div>
+    </div>
     <div>
-        <li>
+        
         <span>
             <i class='bx bx-check'></i>
             Maquettage
         </span>
-    </li></div>
+    </div>
     <div>
-        <li>
+        
         <span>
             <i class='bx bx-check'></i>
             Envoi fichiers au format souhaité (jpg, pdf, eps, png...)
 
         </span>
-    </li></div>
+    </div>
     <div>
-        <li>
+        
         <span>
             <i class='bx bx-check'></i>
             Impression de 100 cartes de visite/ dépliants recto/verso
 
         </span>
-    </li></div>
+    </div>
     <div>
-        <li>
+        
         <span>
             <i class='bx bx-check'></i>
             Cession de droit
 
         </span>
-    </li></div>
+    </div>
     <div>
-        <li>
+        
         <span>
             <i class='bx bx-check'></i>
             Livraison sous 72h
 
         </span>
-    </li></div>
+    </div>
                                     </ul>
                                     </div>
 
@@ -299,79 +299,79 @@
 
                                     <ul>
                                         <div>
-                                            <li><span>
+                                            <span>
                                                 <!-- <i class='bx bx-check'></i> -->
                                                 Charte graphique avancé
                                             </span>
-                                        </li>
-                                            <li><span>
+                                        
+                                            <span>
                                                 <i class='bx bx-check'></i>
                                                 Audit de votre activité
                                             </span>
-                                        </li>
+                                        
                                         </div>
                                         <div>
-                                        <li>
+                                        
                                             <span>
                                                 <i class='bx bx-check'></i>
                                                 Charte graphique
                                             </span>
-                                    </li></div>
+                                    </div>
                                     <div>
-                                    <li>
+                                    
                                             <span>
                                                 <i class='bx bx-check'></i>
 
     Typographie originale                                       </span>
-                                    </li></div>
+                                    </div>
                                     <div>
-                                    <li>
+                                    
                                             <span>
                                                 <i class='bx bx-check'></i>
                                                 Prise de brief et création de 4 à 5 déclinaisons au choix :(Carte visite, flyers dépliants, Enveloppe, Papier en-tête, Dossier commercial, Cachet)
                                             </span>
-                                    </li></div>
+                                    </div>
                                     <div>
-                                        <li>
+                                        
                                             <span>
                                                 <i class='bx bx-check'></i>
 
                                                 4 Propositions vectorisées Cartes de visites                                         </span>
-                                        </li></div>
+                                        </div>
                                         <div>
-                                            <li>
+                                            
                                                 <span>
                                                     <i class='bx bx-check'></i>
 
                                                     Maquettage                                             </span>
-                                            </li></div>
+                                            </div>
                                             <div>
-                                                <li>
+                                                
                                                     <span>
                                                         <i class='bx bx-check'></i>
 
 
     Envoi fichiers au format souhaité (jpg, pdf, eps, png...)                                              </span>
-                                                </li></div>
+                                                </div>
                                                 <div>
-                                                    <li>
+                                                    
                                                         <span>
                                                             <i class='bx bx-check'></i>
                                                             Impression de 300 cartes de visite/ dépliants recto/verso                                                     </span>
-                                                    </li></div>
+                                                    </div>
                                                     <div>
-                                                        <li>
+                                                        
                                                             <span>
                                                                 <i class='bx bx-check'></i>
                                                                 Cession de droit </span>
-                                                        </li></div>
+                                                        </div>
                                                         <div>
-                                                            <li>
+                                                            
                                                                 <span>
                                                                     <i class='bx bx-check'></i>
                                                                     Livraison sous 48h
                                                                     </span>
-                                                                    </li></div>
+                                                                    </div>
 
                                     </ul>
                                     </div>
@@ -391,7 +391,7 @@
         <div class="container">
             <div class="section-title">
                 <span class="sub-title"><strong>Demande de devis</strong></span>
-                <h4 style="color: aliceblue;">Maintenant parlons de votre projet !</h4>
+                <h4 style="color: #999595;">Maintenant parlons de votre projet !</h4>
             </div>
 
             <div class="contact-form">
