--- a/src/app/components/pages/marketing-digital/marketing-digital.component.html
+++ b/src/app/components/pages/marketing-digital/marketing-digital.component.html
@@ -531,7 +531,7 @@
         <div class="container">
             <div class="section-title">
                     <span class="sub-title"><strong>Demande de devis</strong></span>
-                    <h4 style="color: aliceblue;">Maintenant parlons de votre projet !</h4>
+                    <h4 style="color:#999595;">Maintenant parlons de votre projet !</h4>
 
             </div>
 
