--- a/src/app/components/pages/clients/clients.component.scss
+++ b/src/app/components/pages/clients/clients.component.scss
@@ -211,7 +211,7 @@
        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         text-align: center;
         width: 175px;
-        height: auto;
+        height: 100%;
         margin-top: auto;
         margin-bottom: auto;
         display: inline-block;
