--- a/src/app/components/common/footer/footer.component.scss
+++ b/src/app/components/common/footer/footer.component.scss
@@ -191,7 +191,7 @@
     margin-top: 70px;
     text-align: center;
    // background-color: #090a0e;
-   background-color: #828181;
+   background-color: rgb(23, 23, 23);;
     padding: {
         top: 30px;
         bottom: 30px;
@@ -201,7 +201,7 @@
     }
     p {
        // color: #cccccc;
-       color:  rgb(17, 16, 16);
+       color:  rgb(255, 255, 255);
         font-size: 14px;
 
         i {
