--- a/src/app/components/pages/design-graphique/design-graphique.component.scss
+++ b/src/app/components/pages/design-graphique/design-graphique.component.scss
@@ -171,7 +171,7 @@
   .courses-details-image {
     border-radius: 5px;
     margin-bottom: 20px;
-    margin-top: 0px;
+    margin-top: -50px;
     iframe {
         width: 100%;
         border-radius: 5px;
@@ -207,7 +207,7 @@
     }
 }
 .courses-details-desc2{
-    margin-top: -100px;
+    margin-top: -120px;
     margin-bottom: 0px;
    h3 {
     margin-bottom: 15px;
@@ -222,7 +222,7 @@
     }
 
     p {
-        font-size: 15.5px;
+        font-size: 16.5px;
         color: #999595;
         strong {
             color: white;
@@ -257,7 +257,7 @@
     }
 
     .courses-content{
-        
+        //margin-top: -50px;
         width: 900px;
         h3 {
            
@@ -265,11 +265,12 @@
         }
 
         .courses-details-desc{
+            margin-top: -0px;
             ul{
-                li{
+                div{
                     span{
                         color: #eeeeee;
-                        font-size: 17.5px;
+                        font-size: 16.5px;
                     }
                 }
             }
@@ -320,21 +321,21 @@
     }
 }
 .courses-sidebar-information {
-    margin-bottom: 35px;
-    margin-top: 50px;
-    width: 120%;
-    ul {
+    //margin-bottom: 40px;
+    margin-top: -75px;
+    width: 100%;
+    ul {       
         padding-left: 0;
         margin-bottom: 0;
         list-style-type: none;
-        //background-color: var(--whiteColor);
+       // background-color: var(--whiteColor);
         box-shadow: 0px 8px 16px 0px rgba(146, 184, 255, 0.2);
-        white-space:nowrap;
-        margin-top: 7%;
+        white-space: nowrap;
+        margin-top: 19%;
         li {
            
             border-bottom: 1px dashed #eeeeee;
-            color: var(--whiteColor);
+            color: white;
             overflow: hidden;
             text-align: right;
             padding: 12px 15px;    
@@ -343,23 +344,25 @@
                 weight: 500;
             };
             span {
+                color: white;
                 display: block;
                 width: 170px;
                 text-align: left;
                 float: left;
 
                 i {
-                    color: var(--mainColor);
+                   // color: var(--mainColor);
+                   color: white;
                     position: relative;
                     top: 4px;
                     transition: var(--transition);
                     font-size: 20px;
                     margin-right: 2px;
                 }
-            }
-            img{
-                filter: invert(100%);
-                -webkit-filter: invert(100%);
+                img{
+                    filter: invert(100%);
+                    -webkit-filter: invert(100%);
+                }
             }
             &:hover {
                 span {
