--- a/src/app/components/pages/contact-page/contact-page.component.html
+++ b/src/app/components/pages/contact-page/contact-page.component.html
@@ -9,7 +9,10 @@
                     <li><a href="index.html">Acceuil</a></li>
                     <li>Contact</li>
                 </ul> -->
-                <h2>Nous Contacter</h2>
+                <h2>Contact</h2>
+                <h1>IBCOMPROD</h1>
+                <p>
+                    Vous voulez lancer votre produit sur le marché et vous ne savez pas par où commencer ? <br> Vous pensez mettre en place une stratégie de communication et désirez capter l’attention et vous ne savez par quoi faire ? <br> Nous sommes à votre disposition ! Offrez-vous le plaisir d’être servi par IBComProd.</p>
             </div>
         </div>
     </div>
