--- a/src/app/components/common/header-style/header-style.component.html
+++ b/src/app/components/common/header-style/header-style.component.html
@@ -1,5 +1,4 @@
-<div class="fixed-top header" >
-
+    <nav class="fixed-top header">
         <div class="social-Media">
                 <span>
                     <a href="https://www.facebook.com/ibcom.agency" target="_blank"><i class='bx bxl-facebook'></i></a>
@@ -155,4 +154,8 @@
 
         </label>
         </div> -->
-</div>
+    </nav>
+
+   
+
+
