--- a/src/app/components/pages/blog-details-page/blog-details-page.component.scss
+++ b/src/app/components/pages/blog-details-page/blog-details-page.component.scss
@@ -538,7 +538,7 @@
     }
 }
 .page-title-area{
-    background-image: url(../../../../assets/img/bg/blog.png);
+    background-image: url(../../../../assets/img/blogs.png);
     background-size: 100% 100%;
     height: 520px;
     width: 1348px;
@@ -547,7 +547,6 @@
         margin-top: 30%;
     }
 }
-
 .galeryBtn{
     button{
         border: none;
