--- a/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.scss
+++ b/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.scss
@@ -134,15 +134,17 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 400px;
-    scale: 2;
+    width: 965px;
+    height: 430px;
+    scale: 1.8;
+    
   }
   
   .video-foreground iframe {
     width: 100%;
     height: 100%;
     pointer-events: none;
+    margin-left: 0px;
   }
  
 
