--- a/src/app/components/pages/contact-page/contact-page.component.scss
+++ b/src/app/components/pages/contact-page/contact-page.component.scss
@@ -172,6 +172,7 @@
         }
     }
 }
+
 .contact-bg-image {
     position: absolute;
     left: 0;
@@ -210,6 +211,13 @@
     margin-bottom: 40%;
     margin-top: 0%;
     font-weight: bold;
+}
+.sub-title{
+    text-transform: uppercase;
+    color: white;
+    font-weight: 500;
+    margin-bottom: 30px;
+    font-size: 25px;
 }
 @import url('https://fonts.googleapis.com/css?family=Mukta:700');
 
