--- a/src/app/components/pages/blog-right-sidebar-page/blog-right-sidebar-page.component.scss
+++ b/src/app/components/pages/blog-right-sidebar-page/blog-right-sidebar-page.component.scss
@@ -1,18 +1,33 @@
 @import "../../common/blog/blog.component.scss";
 
 .page-title-area{
-    background-image: url(../../../../assets/img/bg/blog.png);
+    background-image: url(../../../../assets/img/blogs.png);
     background-size: 100% 100%;
-    height: 520px;
+    height:520px;
     width: 1348px;
 
     .page-title-content{
         margin-top: 25%;
     }
+    h2{
+      position: absolute;
+      color: #f1f2f6;
+      margin-top: 50px;
+      margin-left: 500px;
+      font-weight: 700;
+      font-size: 70px;
+      color: rgb(214, 212, 212);
+     text-align: center;
+  }
+
 }
 .blog-area{
-    margin-top: -38%;
+    margin-top: -420px;
+    a{color: #f1f2f6;}
+    h3{color: #f1f2f6;}
+    li{color: #b4b4b6;}
 }
+
 .titre{
   margin-top: 2%;
   margin-left: 5%;
@@ -33,6 +48,24 @@
     margin-bottom: 40%;
     margin-top: -10%;
     font-weight: bold;
+}
+.video-foreground {
+  margin-top: 30px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 510px;
+  scale: 1.5;
+}
+.video-foreground iframe {
+  width: 100%;
+  height: 460px;
+  pointer-events: none;
+}
+.widget-area{
+  margin-top: 10px;
+  color: #f1f2f6;
 }
 @import url('https://fonts.googleapis.com/css?family=Mukta:700');
 
