--- a/src/app/components/pages/blog-right-sidebar-page/blog-right-sidebar-page.component.html
+++ b/src/app/components/pages/blog-right-sidebar-page/blog-right-sidebar-page.component.html
@@ -1,134 +1,145 @@
 <app-header-style></app-header-style>
 
-<div class="page-title-area page-title-style-two item-bg4 jarallax" data-jarallax='{"speed": 0.3}'>
-    <div class="container">
-        <div class="page-title-content">
-            <!-- <ul>
-                <li><a href="index.html">Home</a></li>
-                <li>Blog</li>
-            </ul> -->
-            <!-- <h2>Blog</h2> -->
-        </div>
-    </div>
-</div>
-<div class="titre">
-    <h1>Blogs</h1>
-</div>
-<div id="container" class="galeryBtn">
-    <button class="learn-more" routerLink="/galerie">
-      <span class="circle" aria-hidden="true">
-        <span class="icon arrow"></span>
-      </span>
-      <span class="button-text"> voir Galerie</span>
-    </button>
-</div>
-<section class="blog-area ptb-100">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-md-12">
-                <div class="row">
-                    <div class="col-lg-6 col-md-6">
-                        <div class="single-blog-post mb-30">
-                            <div class="post-image">
-                                <a routerLink="/single-blog" class="d-block">
-                                    <img  src="../../../../assets/img/Blog-Imgs/ibcomprod QNB.jpg" alt="image">
-                                </a>
-                            </div>
+<div style="background-color: black; overflow: hidden;">
+    <div class="page-title-area jarallax" data-jarallax='{"speed": 0.3}'>
+        <div class="container">
+            <!-- <div class="page-title-content">
+                <ul>
+                    <a href="index.html">Acceuil</a>
+                    <a href="courses-2-columns-style-1.html">DESIGN GRAPHIQUE</a>
 
-                            <div class="post-content">
-                                <ul class="post-meta">
-                                    <li><a routerLink="/blog-style-2">17 Octobre</a></li>
-                                </ul>
-                                <h3><a routerLink="/single-blog" class="d-inline-block">QNB Sponsor Gold du 24ème Forum International de Réalités</a></h3>
-                                <a routerLink="/single-blog" class="read-more-btn">Voir plus <i class='bx bx-right-arrow-alt'></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-
+                </ul>
+            </div> -->
+            
+            <div id="video-background">
+                <div class="video-foreground">
+                    <iframe src="https://www.youtube.com/embed/NKKW8XlRCv0?playlist=NKKW8XlRCv0&loop=1&autoplay=1&controls=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
 
-            <div class="col-lg-4 col-md-12">
-                <aside class="widget-area">
-                    <section class="widget widget_search">
-                        <form class="search-form">
-                            <label>
-                                <span class="screen-reader-text">Search for:</span>
-                                <input type="search" class="search-field" placeholder="Search...">
-                            </label>
-                            <button type="submit"><i class="bx bx-search-alt"></i></button>
-                        </form>
-                    </section>
-
-                    <section class="widget widget_ednuv_posts_thumb">
-                        <h3 class="widget-title">Popular Posts</h3>
-
-                        <article class="item">
-                            <a routerLink="/single-blog" class="thumb">
-                                <span class="fullimage cover bg1" role="img"></span>
-                            </a>
-                            <div class="info">
-                                <time datetime="2019-06-30">June 10, 2019</time>
-                                <h4 class="title usmall"><a routerLink="/single-blog">Making Peace With The Feast Or Famine Of Freelancing</a></h4>
-                            </div>
-                            <div class="clear"></div>
-                        </article>
-
-                        <article class="item">
-                            <a routerLink="/single-blog" class="thumb">
-                                <span class="fullimage cover bg2" role="img"></span>
-                            </a>
-                            <div class="info">
-                                <time datetime="2019-06-30">June 21, 2019</time>
-                                <h4 class="title usmall"><a routerLink="/single-blog">I Used The Web For A Day On A 50 MB Budget</a></h4>
-                            </div>
-                            <div class="clear"></div>
-                        </article>
-
-                        <article class="item">
-                            <a routerLink="/single-blog" class="thumb">
-                                <span class="fullimage cover bg3" role="img"></span>
-                            </a>
-                            <div class="info">
-                                <time datetime="2019-06-30">June 30, 2019</time>
-                                <h4 class="title usmall"><a routerLink="/single-blog">How To Create A Responsive Popup Gallery?</a></h4>
-                            </div>
-                            <div class="clear"></div>
-                        </article>
-                    </section>
-
-                    <section class="widget widget_categories">
-                        <h3 class="widget-title">Categories</h3>
-                        <ul>
-                            <li><a routerLink="/blog-style-2">RELATIONS PRESSE ET PUBLIQUES<span class="post-count">(03)</span></a></li>
-                            <li><a routerLink="/blog-style-2">Production Audiovisuelle <span class="post-count">(05)</span></a></li>
-                            <li><a routerLink="/blog-style-2">Marketing Digital<span class="post-count">(10)</span></a></li>
-                            <li><a routerLink="/blog-style-2">ÉVÉNEMENTIEL<span class="post-count">(08)</span></a></li>
-                            <li><a routerLink="/blog-style-2">Développement Web<span class="post-count">(01)</span></a></li>
-                            <li><a routerLink="/blog-style-2">DESIGN GRAPHIQUE<span class="post-count">(01)</span></a></li>
-                        </ul>
-                    </section>
-
-
-                    <section class="widget widget_instagram">
-                        <h3 class="widget-title">Instagram</h3>
-
-                        <ul>
-                            <li><a href="#" target="_blank" class="d-block"><img src="assets/img/blog/blog1.jpg" alt="image"></a></li>
-                            <li><a href="#" target="_blank" class="d-block"><img src="assets/img/blog/blog2.jpg" alt="image"></a></li>
-                            <li><a href="#" target="_blank" class="d-block"><img src="assets/img/blog/blog3.jpg" alt="image"></a></li>
-                            <li><a href="#" target="_blank" class="d-block"><img src="assets/img/blog/blog4.jpg" alt="image"></a></li>
-                            <li><a href="#" target="_blank" class="d-block"><img src="assets/img/blog/blog5.jpg" alt="image"></a></li>
-                            <li><a href="#" target="_blank" class="d-block"><img src="assets/img/blog/blog6.jpg" alt="image"></a></li>
-                        </ul>
-                    </section>
-
-
-                </aside>
-            </div>
+            <h2>BLOGS</h2>
+                    
+            
         </div>
     </div>
-</section>
+    <!-- <div class="titre">
+        <h1>Blogs</h1>
+    </div> -->
+    <div id="container" class="galeryBtn">
+        <button class="learn-more" routerLink="/galerie">
+        <span class="circle" aria-hidden="true">
+            <span class="icon arrow"></span>
+        </span>
+        <span class="button-text"> voir Galerie</span>
+        </button>
+    </div>
+    <section class="blog-area ptb-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-12">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6">
+                            <div class="single-blog-post mb-30">
+                                <div class="post-image">
+                                    <a routerLink="/single-blog" class="d-block">
+                                        <img  src="../../../../assets/img/Blog-Imgs/ibcomprod QNB.jpg" alt="image">
+                                    </a>
+                                </div>
 
+                                <div class="post-content">
+                                    <ul class="post-meta">
+                                        <li><a routerLink="/blog-style-2">17 Octobre</a></li>
+                                    </ul>
+                                    <h3><a routerLink="/single-blog" class="d-inline-block">QNB Sponsor Gold du 24ème Forum International de Réalités</a></h3>
+                                    <a routerLink="/single-blog" class="read-more-btn">Voir plus <i class='bx bx-right-arrow-alt'></i></a>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-12">
+                    <aside class="widget-area">
+                        <section class="widget widget_search">
+                            <form class="search-form">
+                                <label>
+                                    <span class="screen-reader-text">Search for:</span>
+                                    <input type="search" class="search-field" placeholder="Search...">
+                                </label>
+                                <button type="submit"><i class="bx bx-search-alt"></i></button>
+                            </form>
+                        </section>
+
+                        <section class="widget widget_ednuv_posts_thumb">
+                            <h3 class="widget-title">Popular Posts</h3>
+
+                            <article class="item">
+                                <a routerLink="/single-blog" class="thumb">
+                                    <span class="fullimage cover bg1" role="img"></span>
+                                </a>
+                                <div class="info">
+                                    <time datetime="2019-06-30">June 10, 2019</time>
+                                    <h4 class="title usmall"><a routerLink="/single-blog">Making Peace With The Feast Or Famine Of Freelancing</a></h4>
+                                </div>
+                                <div class="clear"></div>
+                            </article>
+
+                            <article class="item">
+                                <a routerLink="/single-blog" class="thumb">
+                                    <span class="fullimage cover bg2" role="img"></span>
+                                </a>
+                                <div class="info">
+                                    <time datetime="2019-06-30">June 21, 2019</time>
+                                    <h4 class="title usmall"><a routerLink="/single-blog">I Used The Web For A Day On A 50 MB Budget</a></h4>
+                                </div>
+                                <div class="clear"></div>
+                            </article>
+
+                            <article class="item">
+                                <a routerLink="/single-blog" class="thumb">
+                                    <span class="fullimage cover bg3" role="img"></span>
+                                </a>
+                                <div class="info">
+                                    <time datetime="2019-06-30">June 30, 2019</time>
+                                    <h4 class="title usmall"><a routerLink="/single-blog">How To Create A Responsive Popup Gallery?</a></h4>
+                                </div>
+                                <div class="clear"></div>
+                            </article>
+                        </section>
+
+                        <section class="widget widget_categories">
+                            <h3 class="widget-title">Categories</h3>
+                            <ul>
+                                <li><a routerLink="/blog-style-2">RELATIONS PRESSE ET PUBLIQUES<span class="post-count">(03)</span></a></li>
+                                <li><a routerLink="/blog-style-2">Production Audiovisuelle <span class="post-count">(05)</span></a></li>
+                                <li><a routerLink="/blog-style-2">Marketing Digital<span class="post-count">(10)</span></a></li>
+                                <li><a routerLink="/blog-style-2">ÉVÉNEMENTIEL<span class="post-count">(08)</span></a></li>
+                                <li><a routerLink="/blog-style-2">Développement Web<span class="post-count">(01)</span></a></li>
+                                <li><a routerLink="/blog-style-2">DESIGN GRAPHIQUE<span class="post-count">(01)</span></a></li>
+                            </ul>
+                        </section>
+
+
+                        <section class="widget widget_instagram">
+                            <h3 class="widget-title">Instagram</h3>
+
+                            <ul>
+                                <li><a href="#" target="_blank" class="d-block"><img src="assets/img/blog/blog1.jpg" alt="image"></a></li>
+                                <li><a href="#" target="_blank" class="d-block"><img src="assets/img/blog/blog2.jpg" alt="image"></a></li>
+                                <li><a href="#" target="_blank" class="d-block"><img src="assets/img/blog/blog3.jpg" alt="image"></a></li>
+                                <li><a href="#" target="_blank" class="d-block"><img src="assets/img/blog/blog4.jpg" alt="image"></a></li>
+                                <li><a href="#" target="_blank" class="d-block"><img src="assets/img/blog/blog5.jpg" alt="image"></a></li>
+                                <li><a href="#" target="_blank" class="d-block"><img src="assets/img/blog/blog6.jpg" alt="image"></a></li>
+                            </ul>
+                        </section>
+
+
+                    </aside>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
 <app-footer></app-footer>
