--- a/src/app/components/pages/home-page-one/home-page-one.component.html
+++ b/src/app/components/pages/home-page-one/home-page-one.component.html
@@ -1,6 +1,6 @@
-<!-- <div class="head">
+<div class="head">
     <app-header-style></app-header-style>
-</div> -->
+</div>
     
     <div id="banner">
         <app-homeone-main-banner></app-homeone-main-banner>
