--- a/src/app/components/pages/clients/clients.component.scss
+++ b/src/app/components/pages/clients/clients.component.scss
@@ -221,3 +221,75 @@
 
     }
   }
+.mobileClients{
+  display: none;
+}
+
+  @media screen and (max-width: 375px){
+    .liste{
+      display: none;
+    }
+    
+    .mobileClients{
+      display: block;
+      margin-top: -20px;
+      .carousel-item{
+        width: 200px;
+        // margin-left: auto;
+        // margin-right: auto;
+        img{
+          width: 100%;
+          //display: block;
+          margin-left: 30px;
+        }
+      
+      }
+      
+    }
+  }
+
+  @media screen and (min-width: 376px) and (max-width: 390px){
+    .liste{
+      display: none;
+    }
+    
+    .mobileClients{
+      display: block;
+      margin-top: -20px;
+      .carousel-item{
+        width: 220px;
+        // margin-left: auto;
+        // margin-right: auto;
+        img{
+          width: 100%;
+          //display: block;
+          margin-left: 30px;
+        }
+      
+      }
+      
+    }
+  }
+
+  @media only screen and (min-width:376px) and (max-width: 414px){
+    .liste{
+      display: none;
+    }
+    
+    .mobileClients{
+      display: block;
+      margin-top: -20px;
+      .carousel-item{
+        width: 220px;
+        // margin-left: auto;
+        // margin-right: auto;
+        img{
+          width: 100%;
+          //display: block;
+          margin-left: 30px;
+        }
+      
+      }
+      
+    }
+  }
