--- a/src/app/components/pages/home-page-one/homeone-courses/homeone-courses.component.html
+++ b/src/app/components/pages/home-page-one/homeone-courses/homeone-courses.component.html
@@ -1,5 +1,5 @@
 
-<div style="background-color: black;">
+<div class="bg">
     <section class="courses-area pt-100 pb-70" >
         <div class="container">
             <!-- <div class="section-title text-left">
